Adds DSL code and models for watch face code lab.
Bug: 78130133
Change-Id: I09a655aab21e05fc9d1880230532a6ba7dfbd610

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,5 @@
 <resources>
     <string name="app_name">WatchFaceKotlin</string>
     <string name="message">Watch face tapped</string>
-    <string name="my_analog_name">Kotlin Analog</string>
+    <string name="my_analog_name">Kotlin DSL Analog</string>
 </resources>
